feat(deployment): implement upload endpoint
